--- a/list_things/templates/list_things/layout.html
+++ b/list_things/templates/list_things/layout.html
@@ -10,7 +10,7 @@
     <title>{% block title %}Marketing{% endblock %} | Django</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light shadow mb-3">
         <div class="container">
           <a class="navbar-brand" href="{% url 'index' %}">Marketing</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,16 +22,26 @@
                 <a class="nav-link" href="{% url 'login' %}">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
               </li>
             </ul>
           </div>
         </div>
     </nav>
     <div class="container">
-        <h1 class="display-3 text-center">{% block heading %}{% endblock %}</h1>
-        {% block content%}
-        {% endblock %}
+      <h1 class="display-3 text-center">{% block heading %}{% endblock %}</h1>
+      {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == 'success' %}
+              <div class="alert alert-success">               
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <p class="text-center fw-bold text-success">{{message}}</p>
+              </div>
+            {% endif %}
+        {% endfor %}
+      {% endif %}
+      {% block content%}
+      {% endblock %}
     </div>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
