--- a/list_things/templates/users/login.html
+++ b/list_things/templates/users/login.html
@@ -6,18 +6,28 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 offset-md-4">
-                <form method="post" class="bg-dark p-3 mt-5 text-light">
+                <form method="post" class="shadow bg-light p-4 mt-5 rounded">
+                    <h2 class="fw-bold text-center">Login</h2>
                     {% csrf_token %}
-                    <div class="form-group mt-3">
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control">
-                    </div>
-                    <div class="form-group mt-3">
-                        <label for="username" class="form-label">Password</label>
-                        <input type="password" class="form-control">
-                    </div>
+                    {% if messages %}
+                        {% for message in messages %}
+                            {% if message.tags != 'success'%}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                    {% csrf_token %}
+                    {% for field in form %}
+                        <div class="form-group">
+                            {{field.label_tag}}
+                            {{field}}
+                        </div>
+                    {% endfor %}
                     <div class="d-grid col-6 mx-auto">
-                        <button type="submit" class="btn btn-outline-primary btn-lg mt-3">Login</button>
+                        <button type="submit" class="btn btn-primary btn-lg mt-3 rounded-pill">Login</button>
+                    </div>
                     </div>
                 </form>
             </div>
