--- a/list_things/static/css/styles.css
+++ b/list_things/static/css/styles.css
@@ -2,22 +2,8 @@ body{
     background-color: #F5F5F5;
 }
 
-.btn-primary{
-    background-color: #6AD0A2 !important;
-    border-color: #6AD0A2 !important;
-}
-
-.btn-primary:hover{
-    background-color: #FFF !important;
-    color: #6AD0A2 !important;
-    border-color: #6AD0A2 !important;
-    transition:  all 0.5s ease-in-out !important;
-}
-
-.alert{
+.errorlist{
+    list-style: none;
     padding: 0;
-}
-
-.alert p{
-    margin-bottom: 0;
+    color: red;
 }
