--- a/list_things/templates/list_things/layout.html
+++ b/list_things/templates/list_things/layout.html
@@ -32,14 +32,13 @@
       <h1 class="display-3 text-center">{% block heading %}{% endblock %}</h1>
       {% if messages %}
         {% for message in messages %}
-            {% if message.tags == 'success' %}
-              <div class="alert alert-success">               
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <p class="text-center fw-bold text-success">{{message}}</p>
-              </div>
-            {% endif %}
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                {{message}}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
         {% endfor %}
       {% endif %}
+    </div>
       {% block content%}
       {% endblock %}
     </div>
