--- a/list_things/templates/users/login.html
+++ b/list_things/templates/users/login.html
@@ -3,34 +3,20 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 offset-md-4">
-                <form method="post" class="shadow bg-light p-4 mt-5 rounded">
-                    <h2 class="fw-bold text-center">Login</h2>
-                    {% csrf_token %}
-                    {% if messages %}
-                        {% for message in messages %}
-                            {% if message.tags != 'success'%}
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                              </button>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                    {% csrf_token %}
-                    {% for field in form %}
-                        <div class="form-group">
-                            {{field.label_tag}}
-                            {{field}}
-                        </div>
-                    {% endfor %}
-                    <div class="d-grid col-6 mx-auto">
-                        <button type="submit" class="btn btn-primary btn-lg mt-3 rounded-pill">Login</button>
-                    </div>
-                    </div>
-                </form>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <form method="post" class="shadow bg-light p-4 mt-5 rounded">
+                <h2 class="fw-bold text-center">Login</h2>
+                {% csrf_token %}
+                <div class="form-group mt-3">
+                    
+                </div>
+                <div class="d-grid col-6 mx-auto">
+                    <button type="submit" class="btn btn-primary btn-lg mt-3 rounded-pill">Sign up</button>
+                </div>
+            </form>
         </div>
     </div>
+</div>
 {% endblock %}
