--- a/list_things/templates/users/signup.html
+++ b/list_things/templates/users/signup.html
@@ -4,20 +4,40 @@
 {% block title %}Sign up{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 offset-md-4">
-                <form method="post" class="shadow bg-light p-4 mt-5 rounded">
-                    <h2 class="fw-bold text-center">Sign Up</h2>
-                    {% csrf_token %}
-                    <div class="form-group mt-3">
-                        
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <form method="post" class="shadow bg-light p-4 mt-5 rounded">
+                <h2 class="fw-bold text-center">Sign Up</h2>
+                {% csrf_token %}
+                {% if messages %}
+                    {% for message in messages %}
+                        {% if message.tags != 'success'%}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>H</strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
+                {% for field in form %}
+                    <div class="form-group">
+                        {{field.label_tag}}
+                        {{field}}
+
+                        {% if field.errors %}
+                            {{field.errors}}
+                        {% endif %}
                     </div>
-                    <div class="d-grid col-6 mx-auto">
-                        <button type="submit" class="btn btn-primary btn-lg mt-3 rounded-pill">Sign up</button>
-                    </div>
-                </form>
-            </div>
+                {% endfor %}
+                <div class="d-grid col-6 mx-auto">
+                    <button type="submit" class="btn btn-primary btn-lg mt-3 rounded-pill">Login</button>
+                </div>
+                </div>
+            </form>
         </div>
     </div>
+</div>
 {% endblock %}
