--- a/list_things/templates/list_things/layout.html
+++ b/list_things/templates/list_things/layout.html
@@ -10,38 +10,14 @@
     <title>{% block title %}Marketing{% endblock %} | Django</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light shadow mb-3">
-        <div class="container">
-          <a class="navbar-brand" href="{% url 'index' %}">Marketing</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
+    {% include 'list_things/navbar.html' %}
     <div class="container">
       <h1 class="display-3 text-center">{% block heading %}{% endblock %}</h1>
-      {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                {{message}}
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        {% endfor %}
-      {% endif %}
-    </div>
+      {% include 'list_things/message.html' %}
       {% block content%}
       {% endblock %}
     </div>
+    <script src="https://kit.fontawesome.com/1b238406a3.js" crossorigin="anonymous"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
